# cloudland

./: .gitattributes  .gitignore  .project  .travis.yml  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  autocheck.sh  build.sh  build_grpc.sh  build_grpc_no_download.sh  build_rpm.sh  commitID  cookie.txt  env.sh  grpc.sh  index.html  note  package-lock.json  package.json  skey.enc  wget-log
.github/workflows/: ci.yaml
backup/: bridge_ext.sh  build.sh  build_grpc_download.sh  conf.json.example  deploy.sh  get_vm.sh  gluster.yml  pkg.sh  testip.sh
backup/docbak/: Contribution.md  Introduction.md  Operation.md
backup/scriptsbackup/: clear_vnic.sh  destroy_vtep.sh  get_flow.sh  reset_flow.sh  set_gateway.sh  update_rc.sh
backup/testcases/: testrc
backup/webbak/: dbs.pb.go  openshifts.tmpl  openshifts_patch.tmpl  proxy.go  status_test.go
cland-ui/: .gitignore  README.md  bower.json  main.go
cland-ui/conf/: app.conf
cland-ui/controllers/: mainController.go
cland-ui/models/: client.go  const.go  utils.go
cland-ui/routers/: router.go
cland-ui/tests/: default_test.go
cland-ui/views/: css.tpl  footer.tpl  instances.tpl  js.tpl  layout.tpl  login.html  login.tpl  menuFooter.tpl  menuProfile.tpl  sidebar.tpl  topNavigation.tpl
deploy/: allinone.sh  ansible.cfg  build.sh  cloudland.retry  cloudland.yml  compute.yml  conf.json  conf.json.example  controller.yml  deploy.sh  deploy_compute.sh  gluster.yml  netconf.yml  netconf.yml.example  prepare.retry  prepare.yml  reboot.yml  service.yml  testip.sh  update.sh  update_scripts.sh
deploy/hosts/: hosts
doc/: Build.md  Contribution.md  Deployment.md  Home.md  Installation.md  Introduction.md  Manual.md  Operation.md
doc/backup/: Development.md  Manual.md
public/: index.html
sci/: AUTHORS  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in  pkg.sh
sci/autom4te.cache/: output.0  requests  traces.0
sci/common/: .gitignore  Makefile.am  Makefile.in  envvar.cpp  envvar.hpp  exception.cpp  exception.hpp  group.cpp  group.hpp  ipconverter.cpp  ipconverter.hpp  log.cpp  log.hpp  packer.cpp  range.cpp  range.hpp  socket.cpp  socket.hpp  sshfunc.cpp  sshfunc.hpp  stream.cpp  stream.hpp  thread.cpp  thread.hpp  tools.cpp  tools.hpp
sci/include/: sci.h
sci/libsci/: .gitignore  Makefile.am  Makefile.in  allocator.cpp  allocator.hpp  api.cpp  atomic.hpp  bemap.cpp  bemap.hpp  ctrlblock.cpp  ctrlblock.hpp  dgroup.cpp  dgroup.hpp  embedagent.cpp  embedagent.hpp  eventntf.cpp  eventntf.hpp  filter.cpp  filter.hpp  filterlist.cpp  filterlist.hpp  filterproc.cpp  filterproc.hpp  general.hpp  handlerproc.cpp  handlerproc.hpp  initializer.cpp  initializer.hpp  launcher.cpp  launcher.hpp  listener.cpp  listener.hpp  message.cpp  message.hpp  observer.cpp  observer.hpp  privatedata.cpp  privatedata.hpp  processor.cpp  processor.hpp  (+14 more)
sci/man/aix/: SCI.3  SCI_BE_add.3  SCI_BE_remove.3  SCI_Bcast.3  SCI_Filter_bcast.3  SCI_Filter_load.3  SCI_Filter_unload.3  SCI_Filter_upload.3  SCI_Group_create.3  SCI_Group_free.3  SCI_Group_operate.3  SCI_Group_operate_ext.3  SCI_Group_query.3  SCI_Initialize.3  SCI_Poll.3  SCI_Query.3  SCI_Terminate.3  SCI_Upload.3
sci/man/linux/: SCI.3  SCI_BE_add.3  SCI_BE_remove.3  SCI_Bcast.3  SCI_Filter_bcast.3  SCI_Filter_load.3  SCI_Filter_unload.3  SCI_Filter_upload.3  SCI_Group_create.3  SCI_Group_free.3  SCI_Group_operate.3  SCI_Group_operate_ext.3  SCI_Group_query.3  SCI_Initialize.3  SCI_Poll.3  SCI_Query.3  SCI_Terminate.3  SCI_Upload.3
sci/scia/: .gitignore  Makefile.am  Makefile.in  scia.cpp
sci/scid/: .gitignore  Makefile.am  Makefile.in  extlaunch.cpp  extlaunch.hpp  extlisten.cpp  extlisten.hpp  locker.cpp  locker.hpp  scid.cpp  scid@.service  sciv1
sci/secmod/: Makefile.am  Makefile.in  psec.c  psec.h  psec_lib.h  psec_mod.h  psec_openssh.c  psec_openssh.h  psec_test.c  psec_utils.c
sci/spec/: sci_32bit.spec  sci_64bit.spec
sci/usecase/: Makefile.am  Makefile.in
sci/usecase/dsh/: .gitignore  Makefile.aix  Makefile.am  Makefile.in  ddsh_fe.c  dsh_be.c  dsh_fe.c  edsh_fe.cpp  gdsh_fe.cpp  use_ext_launcher  use_ext_launcher2
sci/usecase/dsh_2/: .gitignore  Makefile.aix  Makefile.am  Makefile.in  buildit  dsh_be.c  dsh_fe.c  edsh_fe.cpp  gdsh_fe.cpp  sdsh_fe.cpp
sci/usecase/dsh_filter/: .gitignore  Makefile.aix  Makefile.am  Makefile.in  buildit  dsh_aggregator.hpp  dsh_be.cpp  dsh_fe.cpp  dsh_filter.cpp  dsh_header.hpp  dsh_packer.cpp  dsh_packer.hpp  dsh_tests.cpp  levenshtein.cpp  levenshtein.hpp
sci/usecase/dsh_filter2/: .gitignore  Makefile.aix  Makefile.am  Makefile.in  downfilter.c  dsh_be.c  dsh_fe.c  upfilter.c  upfiltera.c  upfilterb.c
scripts/: backend  cloudrc  cloudrc.local.example
scripts/admin/: modify_role.sh
scripts/backend/: action_vm.sh  add_fdb.sh  allow_as_addr.sh  apply_sg_rule.sh  attach_link.sh  attach_nic.sh  attach_volume.sh  benchmark.sh  build_meta.sh  clear_floating.sh  clear_gateway.sh  clear_image.sh  clear_link.sh  clear_lxd.sh  clear_net.sh  clear_nspace.sh  clear_portmap.sh  clear_router.sh  clear_sg_chain.sh  clear_vm.sh  clear_volume.sh  create_floating.sh  create_image.sh  create_lbvtep.sh  create_link.sh  create_lxd.sh  create_net.sh  create_portmap.sh  create_router.sh  create_sg_chain.sh  create_veth.sh  create_vnic.sh  create_volume.sh  create_volume_from_image.sh  del_host.sh  (+24 more)
src/: .cloudlet.cpp.swp  .gitignore  App.css  App.js  Makefile  cloudctl.cpp  cloudland.cpp  cloudlet.cpp  cloudlet.service  debug.rc  grpcfile.cpp  grpcmsg.cpp  handler.cpp  handler.hpp  host.list  index.css  index.js  netlayer.cpp  netlayer.hpp  rpcworker.cpp  rpcworker.hpp  sendmsg.cpp  threadpool.cpp  threadpool.hpp
test/: .create-newinstance.sh.swp  1  cookie.txt  create-newinstance.sh  path.sh  ！
test2/: cookie.txt  create-newinstance.sh
testcases/: .test2.sh.swp  create_floatingip.sh  create_instance.sh  create_key.sh  create_wangguan.sh  create_ziwang.sh  sshkey.txt  test1.sh  testVM.sh  testrc
tests/: create-newinstance.sh  test3.sh  testconde.sh  testrc  vm-create.sh
web/: .version  Makefile  go.mod  go.sum
(+1284 files in other folders)
